--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ include ':DeviceSDKAndroid'
 include ':DeviceSDKGeneric'
 include ':examples:Android'
 include ':examples:Generic'
+include 'tests:e2etest:GenericTest'
